infrastructure/k8s_configs/sentry/01-services.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sentry
spec:
  clusterIP: None
  ports:
  - name: web
    port: 9000
    targetPort: 9000
  selector:
    app: web
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sentry
spec:
  clusterIP: None
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis
